Fix: the nav bar drop down appeared behind the search text box.

--- a/digipal/static/css/dpmenu.less
+++ b/digipal/static/css/dpmenu.less
@@ -41,7 +41,7 @@ nav.primary-nav {
     .navbar-collapse {
         
         // prevent bg images from banner to cover navbar
-        z-index: 1;
+        z-index: 3;
         position: relative;
     
         // bg color for main menu
